# Structs

./: CMakeLists.txt  main.cpp
cmake/: CMakeCache.txt  Graphs  Makefile  cmake_install.cmake
structures/Array/: ArrayExceptions.h  BooleanArray.h  Matrix.h  Vector.h  numVector3d.cpp  numVector3d.h  numericVector.cpp  numericVector.h
structures/Graph/: Node.h
structures/List/: List.h
